fix: overflow

--- a/front/src/Views/Auth/Auth.css
+++ b/front/src/Views/Auth/Auth.css
@@ -6,8 +6,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width:100vw;
+    height: 100%;
+    width:100%;
+    overflow: hidden;
 }
 
 .glowing-box {
@@ -37,6 +38,7 @@
     height: 100%;
     z-index: 1;
     display: flex;
+    overflow: hidden;
    
   }
 
